--- a/index.html
+++ b/index.html
@@ -113,7 +113,10 @@
       <img src="joystick-image-1.png" alt="Joystick Asset Image 1" class="preview" />
       <h3>Shift Joystick</h3>
       <p>A lightweight and mobile friendly joystick system built for Unity's New Input System.</p>
-      <p class="coming-soon">Coming Soon — <span class="price">$5</span></p>
+      <p class="coming-soon">Now Available — <span class="price">$5</span></p>
+      <p>
+        <a href="https://assetstore.unity.com/packages/slug/326197" target="_blank" style="display:inline-block; margin-top:8px; padding:8px 12px; background-color:#007acc; color:#fff; border-radius:6px; text-decoration:none;">View on Asset Store</a>
+      </p>
     </div>
   </div>
   <script>
